# aimo3_eval

./: README.md  main.py  pyproject.toml  test.py
outputs/: results_with_metrics.json
outputs/local_gpt-oss-120b_20260111/: attempts.parquet  config.json  metrics.json  times.parquet
outputs/local_gpt-oss-120b_20260111_171355/: attempts.parquet  config.json  metrics.json  times.parquet
outputs/local_gpt-oss-20b_20260111_004206/: attempts.parquet  config.json  metrics.json  times.parquet
outputs/local_gpt-oss-20b_TIR_20260119_1/: attempts.parquet  config.json  metrics.json  times.parquet
outputs/remote_deepseek-reasoner_20260109_201411/: attempts.parquet  results.parquet
outputs/remote_deepseek-reasoner_20260110_150115/: attempts.parquet  times.parquet
outputs/remote_deepseek-reasoner_20260110_162124/: attempts.parquet  times.parquet
outputs/remote_deepseek-reasoner_20260110_171848/: attempts.parquet  config.json  metrics.json  times.parquet
outputs/remote_deepseek-reasoner_20260110_180932/: attempts.parquet  metrics.json  times.parquet
outputs/remote_deepseek-reasoner_20260111_200211/: attempts.parquet  config.json  times.parquet
src/aimo3_eval/: __init__.py  config.py
src/aimo3_eval/data/: loader.py
src/aimo3_eval/engine/: runner.py  sandbox.py  solver.py  vllm_server.py
src/aimo3_eval/metrics/: evaluator.py  extractor.py  math_utils.py
